core/tests/safety/test_destructor_arc_not_send.stderr
error[E0277]: the trait bound `std::sync::Arc<UnSendType>: RawSend` is not satisfied
  --> tests/safety/test_destructor_arc_not_send.rs:40:60
   |
40 |     bp3d_lua::vm::core::destructor::Pool::attach_send(&vm, obj);
   |     -------------------------------------------------      ^^^ the trait `RawSend` is not implemented for `std::sync::Arc<UnSendType>`
   |     |
   |     required by a bound introduced by this call
   |
help: the trait `RawSend` is implemented for `std::sync::Arc<T>`
  --> src/vm/core/destructor.rs
   |
   | impl<T: Send + Sync> RawSend for Arc<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Pool::attach_send`
  --> src/vm/core/destructor.rs
   |
   |     pub fn attach_send<R: RawSend>(vm: &Vm, raw: R) -> R::Ptr
   |                           ^^^^^^^ required by this bound in `Pool::attach_send`

error[E0277]: the trait bound `std::sync::Arc<UnSendType>: RawSend` is not satisfied
  --> tests/safety/test_destructor_arc_not_send.rs:40:5
   |
40 |     bp3d_lua::vm::core::destructor::Pool::attach_send(&vm, obj);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `RawSend` is not implemented for `std::sync::Arc<UnSendType>`
   |
help: the trait `RawSend` is implemented for `std::sync::Arc<T>`
  --> src/vm/core/destructor.rs
   |
   | impl<T: Send + Sync> RawSend for Arc<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
